contact section mobile view fix part 1

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -58,10 +58,56 @@ textarea {
   margin-left: 180px;
   margin-bottom: 20px;
 }
+::-webkit-input-placeholder {
+  text-align: center;
+}
 
 @media (max-width: 1224px) {
   .form-sub-btn {
     width: 200px;
     margin-left: 110px;
+  }
+}
+
+@media (max-width: 480px) {
+  .contact-body {
+    background-color: #f1f1f1;
+  }
+  /* Adjust the height and width for mobile devices */
+  .contact {
+    /* border: 1px solid red; */
+    /* background-color: rebeccapurple; */
+  }
+
+  .contact .contact-body .contact-address {
+    width: 40%;
+    /* background: darkred; */
+    background-color: #f1f1f1;
+    /* background-color: aqua; */
+    /* border: 1px solid red; */
+    margin-top: 60px;
+  }
+
+  .contact .contact-body .contact-address p {
+    margin: 8px 10px;
+    /* background-color: rgb(0, 217, 255); */
+    /* border: 1px solid red; */
+    padding: 1px !important;
+  }
+
+  .contact .contact-body .contact-form {
+    width: 60%;
+    /* background: darkolivegreen; */
+    background-color: #f1f1f1;
+  }
+
+  .form-sub-btn {
+    width: 70px;
+    margin-left: 60px;
+    margin-bottom: 20px;
+  }
+  ::-webkit-input-placeholder {
+    font-size: 12px;
+    text-align: center;
   }
 }
